# helm

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  validate_phase4.py  validate_phase5.py  validate_phase6.py  validate_phase7.py  validate_phase8.py  validate_phase9.py
config/: backtest.yaml
config/prompts/: basic_signal.yaml  evolutionary_signal.yaml
docs/: phase7_research_sentiment.md  threat-model.md
scripts/: risk_audit.py  run_backtest.py  run_evolution.py  run_llm_signal.py
src/: main.py
src/backtest/: __init__.py  engine.py  fees.py  models.py
src/config/: loader.py  models.py
src/evolver/: __init__.py  backtest_adapter.py  fitness.py  models.py  mutation.py  prompt_pool.py  runner.py
src/execution/: __init__.py  execution_engine.py  hyperliquid_executor.py  paper_trading.py  position_tracker.py
src/llm/: __init__.py  client.py  prompt_engine.py  signal_generator.py  tracker.py
src/market_context/: __init__.py  context_builder.py  macro_context.py  perp_microstructure.py
src/risk/: __init__.py  guard.py  manager.py  sizer.py
src/security/: __init__.py  audit_logger.py  auth.py  input_validator.py  rate_limiter.py  secrets_manager.py
src/state/: __init__.py  db.py
src/strategy/: __init__.py  base.py  examples.py
src/telegram/: __init__.py  bot.py
src/webui/: __init__.py  server.py  state.py
static/: style.css
templates/: base.html  config.html  history.html  logs.html  overview.html  positions.html  risk.html  signals.html
tests/unit/: test_backtest_engine.py  test_evolver.py  test_llm_client.py  test_prompt_engine.py  test_risk.py
